Add first attempt to slime world manager support